<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Twitter</string>
    <string name="action_settings">Settings</string>
    <string name="login_label">Connect to Twitter</string>
    <string name="title_activity_timeline">Timeline</string>
    <string name="tvUserNameLabel">User Name</string>
    <string name="tvUserScreenNameLabel">\@handle</string>
    <string name="tvTweetTextLabel">This is the tweet text</string>
    <string name="tvTweetTimestampLabel">XX m</string>
    <string name="miComposeTweet">Compose tweet</string>
    <string name="title_activity_compose_tweet">Compose Tweet</string>
    <string name="btnUpdateStatusLabel">Tweet</string>
    <string name="tvTweetCharCountLabel">140</string>
    <string name="etUpdateStatusLabel">What\'s happening?</string>
    <string name="tvLoginIntructions">"Please click the button below to authorize your app to connect with Twitter.</string>
    <string name="miProfileView">My Profile</string>
    <string name="title_activity_profile">Profile</string>
    <string name="tvUserDescriptionLabel">About Me</string>
    <string name="tvFollowersLabel">0 Followers</string>
    <string name="tvFollowingLabel">0 Following</string>

</resources>