<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${packageName}.${activityClass}" >

    <ImageView
        android:id="@+id/ivProfileImage"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:src="@drawable/ic_launcher" />
    
    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/ivProfileImage"
        android:layout_toRightOf="@+id/ivProfileImage"
        android:layout_marginLeft="5dp"
        android:text="@string/tvUserNameLabel"
        android:textStyle="bold"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tvUserScreenName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvUserName"
        android:layout_alignLeft="@+id/tvUserName"
        android:layout_marginTop="2dp"
        android:text="@string/tvUserScreenNameLabel"
        android:textColor="@android:color/darker_gray"
        android:textSize="13sp" />

    <Button
        android:id="@+id/btnUpdateStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/ivProfileImage"
        android:layout_marginRight="10dp"
        android:text="@string/btnUpdateStatusLabel" 
        android:enabled="false" 
        android:onClick="onUpdateStatus"
        android:textColor="@android:color/white"
        android:background="@drawable/round_corners_active" />
    
    <TextView
        android:id="@+id/tvTweetCharCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/btnUpdateStatus"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:gravity="right"
        android:hint="@string/tvTweetCharCountLabel"
        android:textColor="@android:color/darker_gray"
        android:textSize="13sp" />
    
    <EditText
        android:id="@+id/etUpdateStatus"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignLeft="@+id/ivProfileImage"
        android:layout_alignRight="@+id/btnUpdateStatus"
        android:layout_below="@+id/btnUpdateStatus"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:gravity="left|top"
        android:hint="@string/etUpdateStatusLabel"
        android:textSize="15sp" >

        <requestFocus />
    </EditText>

</RelativeLayout>
