<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/ivProfileImage"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:src="@android:drawable/screen_background_light_transparent"
        android:contentDescription="@android:color/transparent" />
    
    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/ivProfileImage"
        android:layout_toRightOf="@+id/ivProfileImage"
        android:layout_marginLeft="5dp"
        android:text="@string/tvUserNameLabel"
        android:textStyle="bold"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tvUserScreenName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/ivProfileImage"
        android:layout_toRightOf="@+id/tvUserName"
        android:layout_marginLeft="5dp"
        android:text="@string/tvUserScreenNameLabel"
        android:textColor="@android:color/darker_gray"
        android:textSize="13sp"  />
    
    <TextView
        android:id="@+id/tvTweetTimestamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/ivProfileImage"
        android:layout_alignParentRight="true"
        android:layout_marginRight="5dp"
        android:text="@string/tvTweetTimestampLabel"
        android:textColor="@android:color/darker_gray"
        android:textSize="12sp" />
    
    <TextView
        android:id="@+id/tvTweetText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvUserName"
        android:layout_below="@+id/tvUserName"
        android:layout_marginTop="2dp"
        android:layout_marginRight="5dp"
        android:text="@string/tvTweetTextLabel"
        android:autoLink="all" />
    
</RelativeLayout>